# sous-chefs

./: .gitignore  README.md  TASKS.md  entrypoint.sh  manage.py  populate_db_with_test_data.py  populate_db_with_test_data.sh  pyproject.toml  render_entrypoint.sh  run_tests.sh
accounts/: admin.py  auth_backends.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
api/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
my_app/: admin.py  data.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
my_app/templates/my_app/: base.html  cooking-sessions-my-tasks-view.html  create-cooking-session.html  home.html  index.html  list-my-cooking-sessions.html  list-user-tasks-in-cooking-sessions.html  my-cooking-session.html  my-tasks-view.html  recipe-detail-view.html  recipes-list-view.html  recipes-view.html  usertask_block.html  usertask_detail.html  usertask_form.html  usertask_list_potential_blockers.html
sous_chefs/: asgi.py  settings.py  urls.py  wsgi.py
