[tool.poetry]
name = "sous-chefs"
version = "0.1.0"
description = ""
authors = ["Jake Atwell <jake.atwell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
jedi = "^0.19.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
